SERVER-31306 include clusterTime and operationTime in all errors