jstests/sharding/logical_time_metadata.js
@@ -4,27 +4,53 @@
  * where the cluster time metadata can propagated, making it inherently racy.
  */
 (function() {
+    "use strict";
+
+    function assertHasClusterTimeAndOperationTime(res) {
+        assert.hasFields(res, ['$clusterTime']);
+        assert.hasFields(res.$clusterTime, ['clusterTime', 'signature']);
+    }
+
     var st = new ShardingTest({shards: {rs0: {nodes: 3}}, mongosWaitsForKeys: true});
     st.s.adminCommand({enableSharding: 'test'});
 
     var db = st.s.getDB('test');
 
-    // insert on one shard and extract the cluster time
-    var res = assert.commandWorked(db.runCommand({insert: 'user', documents: [{x: 10}]}));
-    assert.hasFields(res, ['$clusterTime']);
+    var res = db.runCommand({insert: 'user', documents: [{x: 10}]});
+    assert.commandWorked(res);
+    assertHasClusterTimeAndOperationTime(res);
 
-    var logicalTimeMetadata = res.$clusterTime;
-    assert.hasFields(logicalTimeMetadata, ['clusterTime', 'signature']);
+    res = db.runCommand({blah: 'blah'});
+    assert.commandFailed(res);
+    assertHasClusterTimeAndOperationTime(res);
+
+    res = db.runCommand({insert: "user", documents: [{x: 10}], writeConcern: {blah: "blah"}});
+    assert.commandFailed(res);
+    assertHasClusterTimeAndOperationTime(res);
 
     res = st.rs0.getPrimary().adminCommand({replSetGetStatus: 1});
 
     var appliedTime = res.optimes.appliedOpTime.ts;
+    var logicalTimeMetadata = res.$clusterTime;
     assert.eq(0,
               timestampCmp(appliedTime, logicalTimeMetadata.clusterTime),
               'appliedTime: ' + tojson(appliedTime) + ' != clusterTime: ' +
                   tojson(logicalTimeMetadata.clusterTime));
 
     assert.commandWorked(db.runCommand({ping: 1, '$clusterTime': logicalTimeMetadata}));
+
+    db = st.rs0.getPrimary().getDB('testRS');
+    res = db.runCommand({insert: 'user', documents: [{x: 10}]});
+    assert.commandWorked(res);
+    assertHasClusterTimeAndOperationTime(res);
+
+    res = db.runCommand({blah: 'blah'});
+    assert.commandFailed(res);
+    assertHasClusterTimeAndOperationTime(res);
+
+    res = db.runCommand({insert: "user", documents: [{x: 10}], writeConcern: {blah: "blah"}});
+    assert.commandFailed(res);
+    assertHasClusterTimeAndOperationTime(res);
 
     st.stop();
 
